# minime_utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/minime_utils/: __init__.py
src/minime_utils/apps/: __init__.py  versioning.py
src/minime_utils/minio/: __init__.py  client.py  exceptions.py  listing.py  readers.py  writers.py
tests/: __init__.py  test_placeholder.py
tests/apps/: test_versioning.py
tests/minio/: __init__.py  test_client.py  test_exceptions.py  test_listing.py  test_readers.py  test_writers.py
