[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minime-utils"
version = "1.0.3"
description = "Shared utilities for minime homeserver (Minio access, logging, settings, etc.)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.34.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["minime_utils*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
]


